# sparrow

./: .gitignore  .merlin  Makefile  _tags  jbuild  myvis.sh  run.sh  sparrow.opam  test.json  test1.json
memo/: buglist.txt  problems  used bug list  배운것.txt
src/core/: main.ml  options.ml  options.mli  preAnalysis.ml
src/debug/: debug.ml  debugmode.ml  debugmode.mli
src/domain/: .#itvDom.ml  Footprint.ml  Footprints.ml  absDom.mli  arrayBlk.ml  arrayBlk.mli  basicDom.ml  basicDom.mli  itv.ml  itv.mli  itvDom.ml  itvDom.mli  mapDom.ml  octDom.ml  octImpactDom.ml  powDom.ml  prodDom.ml  prodDom.mli  structBlk.ml  structBlk.mli
src/instance/: itvAnalysis.ml  octAnalysis.ml  octImpactAnalysis.ml
src/program/: intraCfg.ml  intraCfg.mli
src/report/: alarmExp.ml  report.ml
src/semantics/: itvSem.ml  itvSem.mli  octImpactSem.ml  octSem.ml  octSem.mli
src/sparse/: accessSem.cmt  sparseAnalysis.ml  worklist.ml
src/strategy/: unsoundLib.ml  (+2 more)
test/: array_pointer.c  case0.c  case1of1.c  case1of1trace  case1of2.c  case7_1.c  case7_2.c  example.c  example2.c  fgets_example.c  integer_overflow.c  integer_overflow2.c  memcpy_example.c  memcpy_example2.c  myfile.txt  opendir_example.c  pointer_minus.c  pointer_minus2.c  pointer_minus3.c  pointer_to_array.c  pointer_to_array2.c  sprintf_example.c  sprintf_example2.c  strcat_example.c  strchr_example.c  strcpy_example.c  strcpy_example2.c  strdup_example.c  strncpy_example.c  strrchr_example.c  struct_cast.c  test.c  unsigned_int.c  unsigned_int2.c  weird.c
test.json.vis/: _G_.dot  callgraph.dot  index.html  main.dot
