opam-version: "1.2"
name: "sparrow"
version: "0.2"
maintainer: "Programming Research Laboratory (ROPAS), Seoul National University"
authors: "Programming Research Laboratory (ROPAS), Seoul National University"
homepage: "https://github.com/ropas/sparrow"
bug-reports: "https://github.com/ropas/sparrow/issues"
license: "BSD"
dev-repo: "https://github.com/ropas/sparrow.git"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "ocamlfind" {build}
  "batteries"
  "cil"
  "ocamlgraph"
  "apron"
  "yojson"
  "lymp"
  "ppx_compare"
  "ppx_deriving"
]
available: [ ocaml-version >= "4.04.0" ]
